fix: Gallery item description alignment

--- a/MediaCloud/wwwroot/css/site.css
+++ b/MediaCloud/wwwroot/css/site.css
@@ -361,7 +361,7 @@ body {
     border-radius: 1.5rem;
     padding: 0.5rem;
     text-wrap: nowrap;
-    max-width: 93%;
+    max-width: 86%;
     border: #5063b9;
     border-style: solid;
     border-width: 0.03rem;
